remove navbar fix overflow behaviour, and some more small changes

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,3 +12,12 @@
     border-left: 1px solid rgb(0, 0, 0);
     border-right: 1px solid rgb(0, 0, 0);
 }
+
+#watermark {
+    position: fixed;
+    left: 20px;
+    top: 0px;
+    font-variant: small-caps;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: white;
+}
